# lv2amp

./: CMakeLists.txt  README.md
cmake/Modules/: FindLV2.cmake
data/: amp.ttl.in  seealso.ttl.in
src/: Amp.cpp  Amp.h  Amp.hpp  LinearRoundRobin.cpp  LinearRoundRobin.hpp  Osc.cpp  Osc.hpp  Plugin.cpp  Plugin.hpp  RoundRobin.hpp
